Update dockerfile and run script